# A36Plus_Radio

./: .gitignore  .gitmodules  CMakeLists.txt  GD32F3x0.svd  LICENSE  arm_cc_toolchain.cmake  arm_clang_toolchain.cmake  gd32f33x.cfg  gd32f3x0.cfg  gd32f3x0.ld
CMake/: arm_cc_toolchain.cmake  arm_clang_toolchain.cmake  arm_gcc_toolchain.cmake  arm_gnu_toolchain.cmake
Core/Inc/: dma.h  gpio.h  nvic.h  spi.h  tim.h  usart.h
Core/Src/: dma.c  gpio.c  nvic.c  tim.c  usart.c
Drivers/BK1080/: bk1080.c  bk1080.h
Drivers/BK4819/: bk4819.c  bk4819.h
Drivers/EEPROM/: w25q16jv.c  w25q16jv.h
Drivers/Flash/: w25q16jv.c  w25q16jv.h
Drivers/Key/: key.c  key.h
Drivers/LCD/: gfx.h  jgfx.c  jgfx.h  st7735s.c  st7735s.h  st7735s_compat.c  st7735s_compat.h
GUI/: ui.c  ui.h  ui_menu.c  ui_menu.h
Hardware/Inc/: dma.h  gpio.h  key.h  spi.h  usart.h
Hardware/Src/: dma.c  gpio.c  key.c  spi.c  usart.c
Libraries/GD32/CMSIS/: core_cm4.h  core_cmInstr.h
Libraries/GD32/CMSIS/GD/GD32F3x0/Include/: gd32f3x0.h
Libraries/GD32/CMSIS/GD/GD32F3x0/Source/: start.c
Libraries/GD32/CMSIS/GD/GD32F3x0/Source/ARM/: startup_gd32f3x0.s
Libraries/GD32/GD32F3x0_standard_peripheral/Include/: gd32f3x0_gpio.h  gd32f3x0_usart.h
Libraries/GD32/GD32F3x0_usbfs_library/device/class/audio/Include/: audio_core.h  audio_out_itf.h
Libraries/GD32/GD32F3x0_usbfs_library/device/class/audio/Source/: audio_core.c  audio_out_itf.c
Libraries/GD32/GD32F3x0_usbfs_library/device/class/cdc/Include/: cdc_acm_core.h
Libraries/GD32/GD32F3x0_usbfs_library/device/class/cdc/Source/: cdc_acm_core.c
Libraries/GD32/GD32F3x0_usbfs_library/device/class/dfu/Include/: dfu_core.h  dfu_mem.h
Libraries/GD32/GD32F3x0_usbfs_library/device/class/dfu/Source/: dfu_core.c  dfu_mem.c
Libraries/GD32/GD32F3x0_usbfs_library/device/class/hid/Include/: custom_hid_core.h  standard_hid_core.h
Libraries/GD32/GD32F3x0_usbfs_library/device/class/hid/Source/: custom_hid_core.c  standard_hid_core.c
Libraries/GD32/GD32F3x0_usbfs_library/device/class/iap/Include/: usb_iap_core.h
Libraries/GD32/GD32F3x0_usbfs_library/device/class/iap/Source/: usb_iap_core.c
Libraries/GD32/GD32F3x0_usbfs_library/device/class/msc/Include/: usbd_msc_bbb.h  usbd_msc_core.h  usbd_msc_mem.h  usbd_msc_scsi.h
Libraries/GD32/GD32F3x0_usbfs_library/device/class/msc/Source/: usbd_msc_bbb.c  usbd_msc_core.c  usbd_msc_scsi.c
Libraries/GD32/GD32F3x0_usbfs_library/device/class/printer/Include/: printer_core.h
Libraries/GD32/GD32F3x0_usbfs_library/device/class/printer/Source/: printer_core.c
Libraries/GD32/GD32F3x0_usbfs_library/device/core/Include/: usbd_core.h  usbd_enum.h  usbd_transc.h
Libraries/GD32/GD32F3x0_usbfs_library/device/core/Source/: usbd_core.c  usbd_enum.c  usbd_transc.c
Libraries/GD32/GD32F3x0_usbfs_library/driver/Include/: drv_usb_core.h  drv_usb_dev.h  drv_usb_host.h  drv_usb_hw.h  drv_usb_regs.h  drv_usbd_int.h  drv_usbh_int.h
Libraries/GD32/GD32F3x0_usbfs_library/driver/Source/: drv_usb_core.c  drv_usb_dev.c  drv_usb_host.c  drv_usbd_int.c  drv_usbh_int.c
Libraries/GD32/GD32F3x0_usbfs_library/host/class/hid/Include/: usbh_hid_core.h  usbh_standard_hid.h
Libraries/GD32/GD32F3x0_usbfs_library/host/class/hid/Source/: usbh_hid_core.c  usbh_standard_hid.c
Libraries/GD32/GD32F3x0_usbfs_library/host/class/msc/Include/: usbh_msc_bbb.h  (+2 more)
Libraries/GD32/GD32F3x0_usbfs_library/host/core/Include/: usbh_core.h  usbh_enum.h  usbh_pipe.h  usbh_transc.h
Libraries/GD32/GD32F3x0_usbfs_library/host/core/Source/: usbh_core.c  usbh_enum.c  usbh_pipe.c  usbh_transc.c
Libraries/GD32/GD32F3x0_usbfs_library/ustd/class/cdc/: usb_cdc.h
Libraries/GD32/GD32F3x0_usbfs_library/ustd/class/hid/: usb_hid.h
Libraries/GD32/GD32F3x0_usbfs_library/ustd/class/msc/: msc_bbb.h  msc_scsi.h  usb_msc.h
Libraries/GD32/GD32F3x0_usbfs_library/ustd/common/: usb_ch9_std.h
Projects/: Project.uvguix.Administrator  Project.uvguix.Jamiexu  Project.uvoptx  Project.uvprojx  Projects.code-workspace  projects.uvguix.Administrator  projects.uvoptx  startup_gd32f3x0.lst
Projects/.eide/: eide.json  gd32f330.arm.options.v6.json  project.arm.options.v5.json
Projects/A36Plus/.eide/: eide.json
Projects/output/: Project.build_log.htm  Project_GD32F330.dep  gd32f3x0_adc.crf  gd32f3x0_adc.d  gd32f3x0_cec.crf  gd32f3x0_cec.d  gd32f3x0_cmp.crf  gd32f3x0_cmp.d  gd32f3x0_crc.crf  gd32f3x0_crc.d  gd32f3x0_ctc.crf  gd32f3x0_ctc.d  gd32f3x0_dac.crf  gd32f3x0_dac.d  gd32f3x0_dbg.crf  gd32f3x0_dbg.d  gd32f3x0_dma.crf  gd32f3x0_dma.d  gd32f3x0_exti.crf  gd32f3x0_exti.d  gd32f3x0_fmc.crf  gd32f3x0_fmc.d  gd32f3x0_fwdgt.crf  gd32f3x0_fwdgt.d  gd32f3x0_gpio.crf  gd32f3x0_gpio.d  gd32f3x0_i2c.crf  gd32f3x0_i2c.d  gd32f3x0_it.crf  gd32f3x0_misc.crf  gd32f3x0_misc.d  gd32f3x0_pmu.crf  gd32f3x0_pmu.d  gd32f3x0_rcu.crf  gd32f3x0_rcu.d  gd32f3x0_rtc.crf  gd32f3x0_rtc.d  gd32f3x0_spi.crf  gd32f3x0_spi.d  gd32f3x0_syscfg.crf  (+14 more)
Tools/: encrypt.c
Users/Inc/: FreeRTOSConfig.h  boot.h  gd32f3x0_it.h  lv_conf.h  lv_port_disp.h  main.h  systick.h  usart_flash.h
Users/Src/: boot.c  gd32f3x0_it.c  lv_port_disp.c  main.c  my_tasks.c  systick.c  test.c  usart_flash.c
py_utils/: flash_to_flash.py
(+4 files in other folders)
